# LEDStrip

./: .gitmodules  README
LEDStrip_Client/: CMakeLists.txt  SendLights.cpp
LEDStrip_Client/include/: LED_Client.h
LEDStrip_Client/src/: LED_Client.cpp  main.cpp
LEDStrip_Server/: CMakeLists.txt  LEDStrip_Server.cpp  Lights.cpp
